style:creating and styling options container and also drawing board

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Etch-a-sketch</title>
 </head>
 <body>
+    <header>
+        <h1>Etch-a-sketch</h1>
+    </header>
+    <main>
+        <section class="options-section">
+            <div class="options-container">
+                <input type="color" value="#ff000">
+                <button class = "option">Color Mode</button>
+                <button class = "option">Rainbow mode</button>
+                <button class = "option">Eraser</button>
+                <button class = "option">Clear</button>
+                <input type="range" min="1" max="64">
+            </div>
+        </section>
+        <section class="board"></section>
+    </main>
     <script src="src/script.js"></script>
 </body>
 </html>
