defining variables inside javascript to work with

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <main>
         <section class="options-section">
             <div class="options-container">
-                <input type="color" value="#ff000">
-                <button class = "option">Color Mode</button>
-                <button class = "option">Rainbow mode</button>
-                <button class = "option">Eraser</button>
-                <button class = "option">Clear</button>
-                <input type="range" min="1" max="64">
+                <input type="color" value="#ff000" id = color-picker>
+                <button class = "option color-mode">Color Mode</button>
+                <button class = "option rainbow-mode">Rainbow mode</button>
+                <button class = "option eraser">Eraser</button>
+                <button class = "option clear">Clear</button>
+                <input type="range" min="1" max="64" id = "grid-range">
             </div>
         </section>
         <section class="board"></section>
