feat:building feature which will display grid column and row numbers below the input range element

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="range-container">
                 <input type="range" min="1" max="64" id="grid-range" name="grid-range">
-                <label for="grid-range">3X3</label>
+                <label for="grid-range" id = "grid-label"></label>
             </div>
         </section>
         <section class="board"></section>
