--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <section class="options-section">
             <div class="options-container">
                 <input type="color" value="#ff000" id=color-picker>
-                <button class="option color-mode" data-mode="color-mode">Color Mode</button>
-                <button class="option rainbow-mode" data-mode="rainbow-mode">Rainbow mode</button>
-                <button class="option eraser" data-mode="eraser">Eraser</button>
-                <button class="option clear" data-mode="clear">Clear</button>
+                <button class="option" data-mode="color-mode">Color Mode</button>
+                <button class="option" data-mode="rainbow-mode">Rainbow mode</button>
+                <button class="option" data-mode="eraser">Eraser</button>
+                <button class="option" data-mode="clear">Clear</button>
             </div>
             <div class="range-container">
                 <input type="range" min="1" max="64" id="grid-range" name="grid-range">
